Dark mode fixes

--- a/svg.css
+++ b/svg.css
@@ -115,8 +115,10 @@ g#one line, g#many line { stroke:currentColor; stroke-width:1px; }
 
 
 /* Partitions & debug visuals */
-#debugPartitions rect { fill:#fff8f8; stroke:#f4ebeb; }
+#debugPartitions rect { fill:#fff8f8; stroke:#f4ebeb; stroke-width:30px; }
 #debugPartitions circle { fill:#fffcfc; stroke:#fcc; stroke-opacity:0.5; }
+
+
 #graph .forceVector { stroke:#fcc; stroke-width:6; }
 marker#arrowhead path { fill:#fcc; }
 
@@ -168,8 +170,10 @@ body.dark #graph #bubble circle { fill: #303134 !important; }
 body.dark #bubbleOutline circle { fill: #2a2b2f; stroke: #aaa; }
 
 /* Force vectors and markers */
-body.dark #debugPartitions rect { fill: #170103; stroke: #280205; }
+body.dark #debugPartitions rect { fill: #170103; stroke: #280205; stroke-width:30px; }
 body.dark #debugPartitions circle { fill: #1a0104; stroke: #622; stroke-opacity:0.5; }
+
+
 body.dark #graph .forceVector { stroke: #622; }
 body.dark marker#arrowhead path { fill: #622; }
 
